--- a/index.html
+++ b/index.html
@@ -127,11 +127,9 @@
 <p class="my-2" style="font-size: 1.25rem;">Minggu, 15 Desember 2024</p>
 
 <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3" target="_blank" 
-   href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Indra%20and%20Meliana&details=The%20Wedding%20of%20Indra%20and%20Meliana%20%7C%2015%20Desember%202024%20%7C%20RT%2010%20RW%2002,%20Desa%20Pajerukan,%20Kec.%20Kalibagor,%20Kab.%20Banyumas,%20Jawa%20Tengah%2053191%20%7C%2010.00%20-%2011.00%20WIB&dates=20241215T100000/20241215T110000&location=https://goo.gl/maps/ALZR6FJZU3kxVwN86">
+   href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Indra%20and%20Meliana&details=The%20Wedding%20of%20Indra%20and%20Meliana%20%7C%2015%20Desember%202024%20%7C%20RT%2003%20RW%2001,%20Desa%20Sawangan,%20Kec.%20Punggelan,%20Kab.%20Banjarnegara,%20Jawa%20Tengah%20%7C%2010.00%20-%2011.00%20WIB&dates=20241215T100000/20241215T110000&location=https://goo.gl/maps/YourGoogleMapsLinkHere">
     <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
 </a>
-
-
                 <div class="d-flex justify-content-center align-items-center mt-4 mb-2">
                     <div class="mouse-animation border border-2 rounded-5 px-2 py-1">
                         <div class="scroll-animation rounded-4 bg-secondary"></div>
