--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Common Tag -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Website Undangan Pernikahan Indra dan Meliana Secara Online</title>
+    <title>Undangan Pernikahan Indra dan Meliana</title>
 
     <!-- SEO Tag -->
     <meta name="author" content="Tegarw">
@@ -239,7 +239,7 @@
 
                 <div class="border rounded-pill shadow py-2 px-4 mt-2 mb-4">
                     <!-- Ganti waktunya pada data-waktu (sesuai format tersebut) -->
-                    <div class="row justify-content-center" data-time="2024-12-15 00:00:00" id="count-down">
+                    <div class="row justify-content-center" data-time="2024-12-15 09:00:00" id="count-down">
                         <div class="col-3 p-1">
                             <h2 class="d-inline m-0 p-0" id="day">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
                         </div>
@@ -290,7 +290,7 @@
                 </div>
 
                 <div class="py-2" data-aos="fade-down" data-aos-duration="1500">
-                    <h2 class="font-esthetic m-0 py-2" style="font-size: 2rem;">TASYAKURAN</h2>
+                    <h2 class="font-esthetic m-0 py-2" style="font-size: 1rem;">TASYAKURAN</h2>
                     <p style="font-size: 0.95rem;">TANGGAL: 13&14 Desember 2024</p>
                 </div>
 
