--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
 
                         <div class="carousel-inner rounded-4">
                             <div class="carousel-item active">
-                                <img src="https://picsum.photos/1280/720?random=1" alt="image 1" class="d-block w-100" onclick="util.modal(this)">
+                                <img src="assets/images/gallery1.JPG" alt="image 1" class="d-block w-100" onclick="util.modal(this)">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://picsum.photos/1280/720?random=2" alt="image 2" class="d-block w-100" onclick="util.modal(this)">
+                                <img src="assets/images/gallery2.JPG" alt="image 2" class="d-block w-100" onclick="util.modal(this)">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://picsum.photos/1280/720?random=3" alt="image 3" class="d-block w-100" onclick="util.modal(this)">
+                                <img src="assets/images/gallery3.JPG" alt="image 3" class="d-block w-100" onclick="util.modal(this)">
                             </div>
                         </div>
 
