--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Appearance -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Website Undangan Pernikahan Indra dan Meliana Secara Online">
+    <meta name="apple-mobile-web-app-title" content="Undangan Pernikahan Indra dan Meliana">
     <meta name="theme-color" content="#000000">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -116,12 +116,12 @@
 
         <!-- Home -->
         <section id="home" class="position-relative overflow-hidden p-0 m-0">
-            <img src="./assets/images/bg.png" alt="bg" class="position-absolute opacity-25 top-50 start-50 translate-middle bg-cover-home">
+            <img src="assets/images/gallery1.JPG" alt="bg" class="position-absolute opacity-25 top-50 start-50 translate-middle bg-cover-home">
 
             <div class="position-relative text-center p-2">
                 <h1 class="font-esthetic my-4 fw-medium" style="font-size: 2.5rem;">Undangan Pernikahan</h1>
 
-                <img src="./assets/images/bg.png" alt="bg" onclick="util.modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto">
+                <img src="assets/images/gallery1.JPG" alt="bg" onclick="util.modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto">
 
                 <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Indra &amp; Meliana</h2>
 <p class="my-2" style="font-size: 1.25rem;">Minggu, 15 Desember 2024</p>
