--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="overflow-x-hidden pb-4">
 
                 <div data-aos="fade-right" data-aos-duration="2000">
-                    <img src="./assets/images/cowo.png" alt="cowo" onclick="util.modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto">
+                    <img src="./assets/images/cowo.JPG" alt="cowo" onclick="util.modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto">
                     <h2 class="font-esthetic m-0" style="font-size: 2.5rem;">Indra</h2>
                     <p class="mt-3 mb-1" style="font-size: 1.25rem;">Putra Pertama</p>
                     <p class="mb-0">Bapak Rohman Sutrianto dan Ibu Nibah</p>
@@ -190,7 +190,7 @@
                 </div>
 
                 <div data-aos="fade-left" data-aos-duration="2000">
-                    <img src="./assets/images/cewe.png" alt="cewe" onclick="util.modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto">
+                    <img src="./assets/images/cewe.JPG" alt="cewe" onclick="util.modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto">
                     <h2 class="font-esthetic m-0" style="font-size: 2.5rem;">Meliana</h2>
                     <p class="mt-3 mb-1" style="font-size: 1.25rem;">Putri Pertama</p>
                     <p class="mb-0">Bapak Jauwari Johan dan Ibu Emi Suryati</p>
